Fix flex wrap in the pagination container.

--- a/static/css/properties/properties.css
+++ b/static/css/properties/properties.css
@@ -98,6 +98,7 @@
 
 .pagination ul{
     display: flex;
+    flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
     margin-bottom: 120px;
